--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -27,13 +27,30 @@
   justify-content: center;
 }
 
+@media (max-width: 996px) {
+  .searchContainer {
+    margin-top: 32px;
+}
+}
+
 .searchContainer button {
-  width: 550px; /* Adjust width as needed */
+  width: 50%; /* Adjust width as needed */
   height: 64px; /* Adjust height as needed */
   padding: 10px 20px; /* Adjust padding as needed for text inside the button */
   font-size: 24px; /* Adjust font size as needed */
   border-radius: 8px;
 }
+
+  /* Media query for screens smaller than 768px */
+@media (max-width: 996px) {
+  .searchContainer button {
+    width: 90%; /* Reduced width for smaller screens */
+    height: 50px; /* Reduced height for smaller screens */
+    font-size: 20px; /* Slightly smaller font size */
+    padding: 8px 16px; /* Adjusted padding */
+  }
+}
+
 
 .buttons {
   display: flex;
