--- a/src/components/HomepageFeatures/styles.module.css
+++ b/src/components/HomepageFeatures/styles.module.css
@@ -17,7 +17,8 @@
   padding: 20px;
   margin-bottom: 30px;
   transition: transform 0.3s ease, background-color 0.3s ease;
-  border-radius: 4px; /* optional, for rounded corners */
+  border: 1px solid #d3d3d3; /* Light grey border */
+  border-radius: 10px; /* optional, for rounded corners */
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -43,8 +44,9 @@
   margin-top: 20px;
   margin-bottom: 48px;
   padding: 32px;
-  background-color: #232323;
-  border-radius: 4px;
+  background-color: var(--ifm-background-color); /* Uses the theme's background color */
+  border: 1px solid #d3d3d3; /* Light grey border */
+  border-radius: 10px; /* Rounded corners */
 }
 
 .faqColumns {
